# AIOrchestra

./: Dockerfile  README.md  `Cargo.toml`  `main.py`  crud.py  database.py  dependencies.json  main.py  pyproject.toml  requirements.txt  schemas.py
`.github/workflows/: ci.yml`
`nested/directory/example/: code.py`
`research/: prisma_pulse_research.md`
`src/: app.rs`  consistency_check.rs`  main.rs`  requirements.txt`
`src/integration_tests/: test_functionality.py`
`src/tests/: test_prisma_pulse.py`
aiorchestra_webapp/: agent_manager.py  main.py  offline_functionality.py  realtime_monitoring.py  security_module.py  workflow_designer.py
auth/: api_key_manager.py  session_manager.py
data/projects/prismapulse/: crud.py  main.py  models.py  schemas.py
data/projects/prismapulse/auth/: api_key_manager.py  discord_auth.py  mediafire_auth.py
data/projects/prismapulse/data/projects/prismapulse/: readme.md
data/projects/prismapulse/data/projects/prismapulse/research/: prisma_pulse_research.md
data/projects/prismapulse/data/projects/prismapulse/src/: main.rs
data/projects/prismapulse/data/projects/prismapulse/src/plugins/: example_plugin.py  manager.py
research/: prisma_pulse_research.md
src/: example.rs  main.py
src/plugins/: manager.py
tests/: test_backend.py  test_frontend.py
